# SAUT

./: README.md  robot.py
alphabot2_camera/: CMakeLists.txt  package.xml
alphabot2_camera/scripts/: Camera_to_image.py  listener.py
alphabot2_control/: CMakeLists.txt  package.xml
alphabot2_control/scripts/: control.py  motor_control.py  odometry.py
alphabot2_kalman/: CMakeLists.txt  package.xml
alphabot2_kalman/src/: EKF_2.py  EKF_project.py  fiducial_simulator.py
waveshare_alphabot2/launch/: Alphabot2_fiducial_slam.launch
