<?xml version="1.0"?>
<package format="2">
  <name>alphabot2_kalman</name>
  <version>0.0.0</version>
  <description>The alphabot2_kalman package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="virtual@todo.todo">virtual</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>fiducial_msgs</depend>
  
  <!-- Needed for generating messages -->
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
  
</package>
